# ksp-mission-display

./: .gitattributes  .gitignore  DESIGN.md  LICENSE  Makefile  README.md  build.ps1  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.githooks/: README.md  pre-push
.github/workflows/: ci.yml
app/: contracts.ts  globals.css  layout.tsx  mission-config.ts  page.tsx
app/_components/: MetricBlock.tsx  MissionNav.tsx  StatusBadge.tsx
app/_hooks/: useActiveMission.ts  useTelemetry.ts
app/broadcast/: page.tsx
app/display/: LiveMissionDisplay.tsx  page.tsx
app/fdo/: LiveLaunchFdo.tsx  page.tsx
app/geo-window/: page.tsx
app/mission-planner/: MissionPlanner.tsx  page.tsx
app/mission-setup/: MissionSetup.tsx  page.tsx
backend/: README.md  kmd_backend.py  pyproject.toml  run_backend.ps1  runtime-requirements.txt
backend/kmd/: __init__.py  app.py  contracts.py  fake_server.py  planner.py  simulator.py
backend/kmd/dynamics/: __init__.py  frames.py
backend/kmd/krpc_adapter/: __init__.py  adapter.py  config.py
backend/tests/: test_contract_boundaries.py  test_frames.py  test_krpc_adapter.py  test_planner.py
electron/: lan-sharing.mjs  main.mjs  preload.mjs  standalone-server.mjs  web-runtime.mjs
scripts/: build-chinese-user-guide.py  build-python-backend.ps1  package-electron.ps1  prepare-standalone.mjs  python-env.ps1  run-fake-backend.ps1  test-python-backend.ps1
tests/: electron-lan.test.mjs  rendered-html.test.mjs  standalone-assets.test.mjs
tests/e2e/: mission-display.spec.ts  start-test-stack.mjs
(+4 files in other folders)
