[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ksp-mission-display-backend"
version = "0.1.0"
description = "kRPC telemetry gateway and flight-dynamics backend for KSP Mission Display"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "krpc>=0.5.4,<1",
  "numpy>=2,<3",
  "pydantic>=2.10,<3",
  "scipy>=1.14,<2",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["kmd"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
